# sdk.python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: guide.md  user_guide.md
dspatch/: PACKAGES.md  __init__.py  agent_worker.py  client.py  dispatcher.py  engine.py  errors.py  grpc_channel.py  host.py  instance_router.py  models.py  packages.py  state_manager.py
dspatch/contexts/: __init__.py  claude_context.py  context.py  openai_context.py
dspatch/tools/: __init__.py  agents.py  continue_waiting.py  inquiry.py  inquiry_interrupt.py  receive_inquiry.py
scripts/: gen_proto.sh
tests/: conftest.py  test_agent_worker.py  test_agent_worker_grpc.py  test_await_feed.py  test_claude_context_run.py  test_client_envelope.py  test_client_resilience.py  test_context_grpc.py  test_context_setup.py  test_continue_waiting.py  test_dispatcher.py  test_e2e_interrupt_cycle.py  test_engine_grpc.py  test_grpc_channel.py  test_host_routing.py  test_hub.py  test_input_gate.py  test_inquiry_bubbling.py  test_inquiry_interrupt.py  test_instance_router.py  test_openai_context_run.py  test_proto_smoke.py  test_receive_inquiry.py  test_sdk_integration.py  test_state_manager.py
tests/agents/: echo_agent.py
