[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dspatch-sdk"
version = "0.1.1"
description = "Python SDK for d:spatch agent-to-host communication"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Osman Alperen Çinar-Koraş", email = "oakisnotree@users.noreply.github.com" },
]
keywords = ["agents", "orchestration", "ai", "docker", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27.0", "websockets>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://dspatch.dev"
Documentation = "https://dspatch.dev/docs"
Repository = "https://github.com/dspatch/dspatch-sdk"
Issues = "https://github.com/dspatch/dspatch-sdk/issues"

[tool.setuptools.packages.find]
include = ["dspatch*"]

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
